<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Introshop</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_grour">群聊</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_sacn">扫一扫</string>
    <string name="tab_contact">分类</string>
    <string name="tab_found">自由之城</string>
    <string name="tab_me">首页</string>
    <string name="menu">社交菜单</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登 \t\t\t\t\t \t陆 </string>
    <string name="action_register">注    \t\t\t\t\t\t     册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>